--- a/Final-.ipynb
+++ b/Final-.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f4511cf1",
+   "metadata": {},
+   "source": [
+    "# IMPORT LIBRARIES"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 85,
    "id": "29a36fe5-8296-43ce-adb7-147b540072b8",
@@ -21,10 +29,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d890d240-524a-42da-81f9-08d37026880c",
+   "id": "98ffd5ea",
    "metadata": {},
    "source": [
-    "DATA UNDERSTANDING"
+    "# DATA UNDERSTANDING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6063017e",
+   "metadata": {},
+   "source": [
+    "## Import Data"
    ]
   },
   {
@@ -259,6 +275,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33995e38",
+   "metadata": {},
+   "source": [
+    "## Check Data Info"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 87,
    "id": "844a2d9b-3b69-47df-9051-1af8299609c7",
@@ -362,7 +386,15 @@
    "id": "583fb731-75c0-4bb3-9dae-6d242cfab528",
    "metadata": {},
    "source": [
-    "FEATURES ENGINEERING"
+    "# DATA UNDERSTANDING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9629cfde",
+   "metadata": {},
+   "source": [
+    "## Drop Coloumn"
    ]
   },
   {
@@ -563,6 +595,14 @@
    "outputs": [],
    "source": [
     "df.drop('loan_status', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8846c094",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
    ]
   },
   {
@@ -991,7 +1031,7 @@
    "id": "21f67715-4a40-48b2-8719-9aa103b9f97f",
    "metadata": {},
    "source": [
-    "Exploratory Data Analysis"
+    "# EXPLORATORY DATA ANALYSIS"
    ]
   },
   {
@@ -2475,7 +2515,7 @@
    "id": "eb7d52c9-c8eb-44d4-a803-92128284af85",
    "metadata": {},
    "source": [
-    "DATA PREPROCESSING"
+    "# DATA PREPROCESSING"
    ]
   },
   {
@@ -3194,7 +3234,7 @@
    "id": "a42eacbc-a126-413e-be0e-de5245a1340a",
    "metadata": {},
    "source": [
-    "DATA MODELLING"
+    "# DATA MODELLING"
    ]
   },
   {
@@ -3655,7 +3695,7 @@
    "id": "c7f82c07-7b07-4898-8868-f510f0418fcc",
    "metadata": {},
    "source": [
-    "EVALUATION"
+    "# EVALUATION"
    ]
   },
   {
